--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "js": "^0.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "md5": "^2.3.0",
+    "sequelize": "^6.37.5",
     "supabase": "^1.219.2"
   },
   "devDependencies": {
